feat: added finance recors CRUD apis and stop tracking .postman
